<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
            android:id="@+id/menu_top"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_makePayment"
                android:title="@string/make_payment"/>
        <item
                android:id="@+id/nav_result"
                android:title="@string/result"/>
        <item
                android:id="@+id/nav_food_n_beverages"
                android:title="@string/food_n_beverages"/>
        <item
                android:id="@+id/nav_emergency"
                android:title="@string/emergency"/>
        <item
                android:id="@+id/nav_sponsors"
                android:title="@string/sponsors"/>

    </group>



    <group
            android:id="@+id/menu_bottom"
            android:checkableBehavior="none">

            <item
                    android:id="@+id/nav_team"
                    android:title="@string/team"/>
            <item
                    android:id="@+id/nav_developer"
                    android:title="@string/developer"/>

    </group>

</menu>
