<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_carnival"
            android:icon="@drawable/ic_carnival_icon"
            android:title="@string/carnival"/>

    <item
            android:id="@+id/navigation_events"
            android:icon="@drawable/ic_events_icon"
            android:title="@string/events"/>

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_workshops"
            android:icon="@drawable/ic_workshops"
            android:title="@string/workshops"/>

    <item
            android:id="@+id/navigation_silentdj"
            android:icon="@drawable/ic_silent_dj"
            android:title="@string/silent_dj"/>

</menu>
