<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation">

    <fragment
            android:id="@+id/nav_map"
            android:name="com.example.laxiweldemo.sideNavBarFragments.FragmentFoodnBeverages"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_food_n_beverages"
            android:name="com.example.laxiweldemo.sideNavBarFragments.FragmentEmergency"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery" />

    <fragment
            android:id="@+id/nav_emergency"
            android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow" />

    <fragment
            android:id="@+id/nav_sponsors"
            android:name="com.example.laxiweldemo.sideNavBarFragments.FragmentSponsors"
            android:label="@string/menu_tools"
            tools:layout="@layout/fragment_tools" />

    <fragment
            android:id="@+id/nav_team"
            android:name="com.example.laxiweldemo.sideNavBarFragments.FragmentTeam"
            android:label="@string/menu_share"
            tools:layout="@layout/fragment_share" />

    <fragment
            android:id="@+id/nav_developer"
            android:name="com.example.laxiweldemo.sideNavBarFragments.FragmentDeveloper"
            android:label="@string/menu_send"
            tools:layout="@layout/fragment_send" />
</navigation>